# rbspy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-crate.yml
src/: lib.rs  main.rs
src/core/: initialize.rs  ruby_spy.rs  ruby_version.rs  types.rs
src/recorder/: record.rs  snapshot.rs
src/sampler/: mod.rs
src/ui/: flamegraph.rs
