[package]
name = "rbspy"
version = "0.3.11"
authors = ["Julia Evans <julia@jvns.ca>"]
description = "Sampling CPU profiler for Ruby"
keywords = ["ruby", "profiler", "MRI"]
license = "MIT"
repository = "https://github.com/rbspy/rbspy"
readme = "README.md"
documentation = "https://github.com/rbspy/rbspy"
homepage = "https://github.com/rbspy/rbspy"
edition = "2018"

[lib]
crate-type = ["staticlib", "dylib", "rlib"]

[workspace]

[dependencies]
chrono = "0.4"
clap = "2"
elf = "0.0.10"
log = "0.4.6"
rand = "0.6"
failure = "0.1.5"
failure_derive = "0.1.5"
flate2 = "1"
libc = "0.2.34"
proc-maps = "0.1.4"
rbspy-ruby-structs = { path = "ruby-structs", version="0.1.0" }
remoteprocess = "0.3.1"
lazy_static = "1.2.0"

[target.'cfg(unix)'.dependencies]
nix = "0.13.0"

[target.'cfg(target_os="macos")'.dependencies]
libproc = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["timeapi", "wow64apiset"] }

[dev-dependencies]
byteorder = "1.3.1"
rbspy-testdata = { git = "https://github.com/rbspy/rbspy-testdata", branch = "master" }
tempdir = "0.3.4"

[build-dependencies]
rustc_version = "0.2.3"
