[package]
name = "rbspy"
version = "0.6.0"
authors = ["Adam Jensen <acjensen@gmail.com>", "Julia Evans <julia@jvns.ca>"]
description = "Sampling CPU profiler for Ruby"
keywords = ["ruby", "profiler", "MRI"]
license = "MIT"
repository = "https://github.com/rbspy/rbspy"
readme = "README.md"
documentation = "https://github.com/rbspy/rbspy"
homepage = "https://rbspy.github.io/"
edition = "2018"

[lib]
crate-type = ["staticlib", "dylib", "rlib"]

[workspace]
members = [
    "ruby-structs",
]

[dependencies]
anyhow = "1.0.40"
chrono = "0.4"
clap = "2"
ctrlc = "3.1.0"
elf = "0.0.10"
env_logger = "0.8.3"
inferno = "0.10.3"
failure = "0.1.5"
failure_derive = "0.1.5"
flate2 = "1.0.20"
libc = "0.2.34"
log = "0.4.6"
proc-maps = "0.1.8"
rand = "0.8.3"
rbspy-ruby-structs = { path = "ruby-structs", version="0.6.0" }
remoteprocess = "0.4.3"
lazy_static = "1.2.0"
thiserror = "1.0.24"

[target.'cfg(unix)'.dependencies]
nix = "0.19.1"

[target.'cfg(target_os="macos")'.dependencies]
libproc = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["timeapi", "wow64apiset"] }

[dev-dependencies]
byteorder = "1.4.3"
rbspy-testdata = { git = "https://github.com/rbspy/rbspy-testdata", branch = "master" }
tempdir = "0.3.4"

[build-dependencies]
rustc_version = "0.3.3"
